--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ a.header__language-button:hover {
     text-decoration: none;
 }
 
-.filters__button:disabled {
+.filters__button.active {
     padding: 16px 38px;
     min-width: 150px;
     text-align: center;
