--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ a {
     color: var(--text-primary);
 }
 
+iframe {
+    max-width: 100%;
+}
+
 .container {
     max-width: 1030px;
     margin: 0 auto;
@@ -112,6 +116,7 @@ a {
 
 .header__container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 
@@ -255,6 +260,7 @@ a.header__language-button:hover {
 
 .nav__container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .nav__link {
@@ -428,6 +434,7 @@ input:checked + .filters__button {
 
 .footer__container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .footer__left {
